--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -45,6 +45,9 @@ body {
     border-radius: 5px;
     width: 100%;
   }
+  .messageModal {
+    width: 500px;
+  }
   
   /* Extra small devices (portrait phones, less than 576px)
   No media query since this is the default in Bootstrap */
